examples/positive/L2/for_loop.ob
MODULE ForLoop;

VAR x,i: INTEGER;

BEGIN
  x := 0;

  FOR i := 0 TO 10 DO
    x := x + 1
  END;

END ForLoop.
