examples/negative/parse_errors/L1/reserved_to.ob
MODULE Reserved;

VAR TO: INTEGER;

END Reserved.
